--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "esri-leaflet-geocoder": "^3.0.0",
     "leaflet": "^1.7.1",
     "leaflet-geosearch": "^3.3.1",
+    "leaflet-spin": "^1.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
